[feature-signup-btn-mobile] - Fix signup btn width on mobile

--- a/styles/_signup.scss
+++ b/styles/_signup.scss
@@ -140,6 +140,7 @@
         @include mq(950px) {
             display: block;
             margin: 0 auto 0 auto;
+			width: 100%;
             float: none;
 
             &.last {
